# Nioh3-Plugins

./: CMakeLists.txt  compile_commands.json  generate_compile_commands.py  vcpkg.json
common/: CMakeLists.txt
common/include/: CommonUtils.h  FileUtils.h  GameType.h  HookUtils.h  LogUtils.h  PluginAPI.h  Relocation.h
common/include/gzip/: compress.hpp  decompress.hpp
common/src/: CommonUtils.cpp  FileUtils.cpp  GameType.cpp  HookUtils.cpp  LogUtils.cpp  Relocation.cpp
plugins/LivingArtifactCutsceneAlways/: CMakeLists.txt  main.cpp
plugins/LooseFileLoader/: CMakeLists.txt  README.md  assetdump.md  demo.txt  extract_property_hashes.py  main.cpp  property.txt  property_hashes.csv
plugins/LooseFileLoader/analysis/: VFS_MountResource_14038B5F0_analysis.md
plugins/LooseFileLoader/decompile/: RDB_RDX_FDATA_Relationship.md  RDB_StartupBootstrap_140A96460_decompile.cpp  StreamFileReader_Vtbl_143709F20_analysis.md  TexContext_14065B540_analysis.md  VFS_MountResource_14038B5F0_analysis.md  VFS_MountResource_14038B5F0_decompile.cpp
plugins/LooseFileLoader/include/: AssetRuntimeTypes.h  Common.h  LooseModFileReader.h  ModAssetIndex.h  ModAssetManager.h  ModFileReader.h  ModHooks.h  RdbTool.h
plugins/LooseFileLoader/src/: LooseModFileReader.cpp  ModAssetIndex.cpp  ModAssetManager.cpp  ModFileReader.cpp  ModHooks.cpp  RdbTool.cpp  RdbToolTests.cpp
plugins/TransmogUnlocker/: TransmogUnlocker.ini  main.cpp
plugins/UnlimitedTransmog/: UnlimitedTransmog.ini  main.cpp
